--- a/app/src/main/res/layout/activity_student_style.xml
+++ b/app/src/main/res/layout/activity_student_style.xml
@@ -17,9 +17,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="21dp"
         android:layout_marginBottom="13dp"
-        android:text="Button" />
-
-
+        android:text="Back" />
 
     <Switch
         android:id="@+id/sw_Student_Car"
