--- a/app/src/main/res/layout/activity_student_style.xml
+++ b/app/src/main/res/layout/activity_student_style.xml
@@ -214,6 +214,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="199dp"
-        android:text="Finish Regristration" />
+        android:text="Finish Registration" />
 
 </RelativeLayout>
